--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -17,22 +17,28 @@ window {
 
 #input {
     margin: 10px;
-    border: none;
-    border-radius: 8px;
+    border: 1px solid #1b1f24;
+    /* Wet Asphalt Border */
+    border-radius: 6px;
     background-color: #111317;
     color: #d6d6d6;
-    padding: 10px;
+    padding: 12px;
 }
 
 #entry {
-    margin: 2px 10px;
-    padding: 10px;
-    border-radius: 8px;
+    margin: 0px 10px;
+    padding: 12px;
     border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    /* Separator */
     background-color: transparent;
     color: #8a8a8a;
-    transition: all 0.2s ease;
-    border-radius: 6px;
+    transition: all 0.1s ease;
+    border-radius: 0px;
+}
+
+#entry:last-child {
+    border-bottom: none;
 }
 
 #entry:selected {
