--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -12,14 +12,14 @@ window {
     /* Accent Border */
     background-color: rgba(17, 19, 23, 1.0);
     /* Transparent */
-    border-radius: 6px;
+    border-radius: 16px;
 }
 
 #input {
     margin: 10px;
     border: 1px solid #1b1f24;
     /* Wet Asphalt Border */
-    border-radius: 6px;
+    border-radius: 12px;
     background-color: #111317;
     color: #d6d6d6;
     padding: 12px;
@@ -45,6 +45,9 @@ window {
     background-color: #5f7c8a;
     /* V9 Accent */
     color: #ffffff;
+    border-radius: 12px;
+    margin: 2px 4px;
+    border-bottom: none;
 }
 
 #text {
