--- a/presets/hypr-knight/config/wofi/style.css
+++ b/presets/hypr-knight/config/wofi/style.css
@@ -8,7 +8,7 @@
 
 window {
     margin: 0px;
-    border: 2px solid #6f7a80;
+    border: 2px solid #c7a008;
     /* Accent Border */
     background-color: rgba(36, 36, 36, 0.94);
     /* Transparent */
@@ -42,7 +42,7 @@ window {
 }
 
 #entry:selected {
-    background-color: #6f7a80;
+    background-color: #c7a008;
     /* V9 Accent */
     color: #ffffff;
 }
