--- a/presets/hypr-knight/config/wofi/style.css
+++ b/presets/hypr-knight/config/wofi/style.css
@@ -10,7 +10,7 @@ window {
     margin: 0px;
     border: 2px solid #788496;
     /* Accent Border */
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.85);
     /* Pure Black */
     border-radius: 0px;
 }
